--- a/MyPic/src/main/AndroidManifest.xml
+++ b/MyPic/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -17,7 +18,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name="cl.returnvoid.mypic.MainActivity"
             android:label="@string/app_name" >
@@ -26,6 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="cl.returnvoid.mypic.SettingsActivity"
+            android:label="@string/title_activity_settings" >
         </activity>
     </application>
 
