--- a/MyPic/src/main/AndroidManifest.xml
+++ b/MyPic/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -31,6 +31,11 @@
             android:name="cl.returnvoid.mypic.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
+        <activity
+            android:name="cl.returnvoid.mypic.ProcessImageActivity"
+            android:label="@string/title_activity_process_image" >
+        </activity>
+        <activity android:name=".fragments.PreviewCameraFragment"/>
     </application>
 
 </manifest>
