--- a/MyPic/src/main/AndroidManifest.xml
+++ b/MyPic/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -23,7 +24,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -35,7 +35,12 @@
             android:name="cl.returnvoid.mypic.ProcessImageActivity"
             android:label="@string/title_activity_process_image" >
         </activity>
-        <activity android:name=".fragments.PreviewCameraFragment"/>
+        <activity
+            android:name="cl.returnvoid.mypic.PreviewCameraActivity"
+            android:label="@string/title_activity_preview_camera" >
+        </activity>
+        <activity android:name="com.facebook.LoginActivity"/>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
     </application>
 
 </manifest>
