--- a/libraries/facebook/build.gradle
+++ b/libraries/facebook/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
     repositories {
-        mavenCentral()
+        maven { url 'http://repo1.maven.org/maven2' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.5.+'
     }
 }
-apply plugin: 'android'
+
+apply plugin: 'android-library'
 
 dependencies {
     compile files('libs/android-support-v4.jar')
-    compile project(':libraries:facebook')
 }
 
 android {
@@ -20,5 +20,14 @@ android {
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion 16
+    }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            resources.srcDirs = ['src']
+            res.srcDirs = ['res']
+        }
     }
 }
